# SoroEditor

./: .gitignore  README.md  SoroEditor.py  ThirdPartyNotices.txt  aaa.tcs  castella.py  hello.txt  noname.tcs  pyproject.toml  requirements.txt  settings.yaml  test.py  test2.py  test3.py  threecrows copy.py  threecrows.py  は.tcs  は.tcs - ショートカット.lnk  台本テスト.tcs
SoroEditor/: SoroEditor.py  __main__.py
soroeditor/: SoroEditor.py  soroeditor.py
