[tool.poetry]
name = "soroeditor"
version = "0.0.0"
description = "SoroEditor is a text editor that allows multi-column editing."
authors = ["joppincal <106348367+joppincal@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"

[tool.poetry.dependencies]
python = "^3.11"
ttkbootstrap = "^1.10.1"
PyYAML = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
